sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:9: error: not found: value lusPetitQue
       while ((j>0)&&(!lusPetitQue(j-1,v)))
                       ^